force-app/main/default/objects/CustomerAccountEvent__e/CustomerAccountEvent__e.object-meta.xml
<CustomObject>
    <description>Customer Account Event to publish the customer account creation with Name,Address,Email,Phone,ABID details</description>
    <label>CustomerAccountEvent</label>
    <pluralLabel>CustomerAccountEvents</pluralLabel>
</CustomObject>