force-app/main/default/objects/CustomerAccountEvent__e/fields/AB_ID__c.field-meta.xml
<CustomField>
    <fullName>AB_ID__c</fullName>
    <label>AB ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>