force-app/main/default/objects/CustomerAccountEvent__e/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name</description>
    <label>Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>